# py-tictoc-timer

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pypi-publish.yml  unit-tests.yml
cov-report/xml/: cov-report.xml
py_tictoc/: tictoc.py
py_tictoc_timer/: __init__.py  tictoc.py
src/cli/init/: init.sh
src/cli/lint/: black.sh
src/cli/test/: test.sh
tests/: test_tictoc.py
tictoc_timer/: tictoc.py
