[tool.poetry]
name = "py-tictoc-timer"
version = "1.5.2"
description = "Time the execution of Python code using syntax similar to MATLAB's tic and toc functions."
readme = "README.md"
license = "MIT"
authors = [
    "Chris Mahoney <chrismahoney@hotmail.com>",
]
repository = "https://github.com/chrimaho/py-tictoc-timer.git"

[tool.poetry.dependencies]
python = ">=3.7,<4"
typeguard = "^4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3"
pre-commit = "^3.3"
isort = "^5.12"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3"
pytest-clarity = "^1.0"
pytest-cov = "^4.0"
pytest-sugar = "^0.9"
pytest-xdist = "^3.3"
mypy = "^1.3"

[tool.black]
color = true
safe = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.mypy]
ignore_missing_imports = true
pretty = true
install_types = true
non_interactive = true
no_strict_optional = true
allow_redefinition = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
addopts = "--verbose --cov=tests --cov-report=term --cov-report=html:cov-report/html --cov-report=xml:cov-report/xml/cov-report.xml"
testpaths = [
    "tests",
]
# Directories that are not visited by pytest collector:
norecursedirs = [
    "hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__",
]
doctest_optionflags = [
    "NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL",
]

[tool.isort]
import_heading_future = "Future Python Library Imports"
import_heading_stdlib = "Python StdLib Imports"
import_heading_thirdparty = "Python Open Source Imports"
import_heading_firstparty = "Local Module Imports"
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
